--- a/composer.json
+++ b/composer.json
@@ -17,14 +17,14 @@
         "php": "^7.2",
         "ext-json": "*",
         "dompdf/dompdf": "^0.8.0",
-        "illuminate/contracts": "^6.0|^7.0",
-        "illuminate/database": "^6.0|^7.0",
-        "illuminate/http": "^6.0|^7.0",
-        "illuminate/log": "^6.0|^7.0",
-        "illuminate/notifications": "^6.0|^7.0",
-        "illuminate/routing": "^6.0|^7.0",
-        "illuminate/support": "^6.0|^7.0",
-        "illuminate/view": "^6.0|^7.0",
+        "illuminate/contracts": "^6.0|^7.0|^5.5",
+        "illuminate/database": "^6.0|^7.0|^5.5",
+        "illuminate/http": "^6.0|^7.0|^5.5",
+        "illuminate/log": "^6.0|^7.0|^5.5",
+        "illuminate/notifications": "^6.0|^7.0|^5.5",
+        "illuminate/routing": "^6.0|^7.0|^5.5",
+        "illuminate/support": "^6.0|^7.0|^5.5",
+        "illuminate/view": "^6.0|^7.0|^5.5",
         "moneyphp/money": "^3.2",
         "nesbot/carbon": "^2.0",
         "stripe/stripe-php": "^7.0",
